--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,19 @@
 @import "material-symbols/rounded.css";
+@import "./styles/skeleton.css";
+@import "./styles/intensity.css";
 
 :root {
   font-family: "Lato", "Noto Sans TC", sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  
   --surface-hsl: 0deg 0% 25%;
   --surface-variant-hsl: 0deg 0% 20%;
   --background-hsl: 0deg 0% 13%;
@@ -44,104 +48,6 @@ body {
   &:empty::after {
     content: "1";
   }
-}
-
-.intensity-0 {
-  border: 1px solid #808080;
-  color: white;
-  background-color: #202020;
-  box-sizing: border-box;
-
-  &:empty::after {
-    content: "0";
-  }
-}
-
-.intensity-1 {
-  color: white;
-  background-color: #003264;
-
-  &:empty::after {
-    content: "1";
-  }
-}
-
-.intensity-2 {
-  color: white;
-  background-color: #0064C8;
-
-  &:empty::after {
-    content: "2";
-  }
-}
-
-.intensity-3 {
-  color: white;
-  background-color: #1E9632;
-
-  &:empty::after {
-    content: "3";
-  }
-}
-
-.intensity-4 {
-  color: black;
-  background-color: #FFC800;
-
-  &:empty::after {
-    content: "4";
-  }
-}
-
-.intensity-5 {
-  color: black;
-  background-color: #FF9600;
-
-  &:empty::after {
-    content: "5⁻";
-  }
-}
-
-.intensity-6 {
-  color: black;
-  background-color: #FF6400;
-
-  &:empty::after {
-    content: "5⁺";
-  }
-}
-
-.intensity-7 {
-  color: white;
-  background-color: #FF0000;
-
-  &:empty::after {
-    content: "6⁻";
-  }
-}
-
-.intensity-8 {
-  color: white;
-  background-color: #C00000;
-
-  &:empty::after {
-    content: "6⁺";
-  }
-}
-
-.intensity-9 {
-  color: white;
-  background-color: #9600C8;
-
-  &:empty::after {
-    content: "7";
-  }
-}
-
-.intensity-unknow {
-  color: white;
-  background-color: #202020;
-  box-shadow: inset 0px 0px 0px 2px #808080;
 }
 
 @media (prefers-color-scheme: dark) {
