--- a/src/styles/intensity.css
+++ b/src/styles/intensity.css
@@ -1,7 +1,7 @@
 :root {
   --intensity-0: #202020;
-  --intensity-1: #003264;
-  --intensity-2: #0064c8;
+  --intensity-1: #004080;
+  --intensity-2: #0070e0;
   --intensity-3: #1e9632;
   --intensity-4: #ffc800;
   --intensity-5: #ff9600;
@@ -19,7 +19,7 @@
     background-color: #202020;
   }
 
-  &:empty::after {
+  &::after {
     content: "0";
   }
 }
@@ -36,7 +36,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "1";
   }
 }
@@ -53,7 +53,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "2";
   }
 }
@@ -70,7 +70,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "3";
   }
 }
@@ -87,7 +87,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "4";
   }
 }
@@ -104,7 +104,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "5⁻";
     letter-spacing: -1px;
   }
@@ -122,7 +122,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "5⁺";
     letter-spacing: -1px;
   }
@@ -140,7 +140,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "6⁻";
     letter-spacing: -1px;
   }
@@ -158,7 +158,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "6⁺";
     letter-spacing: -1px;
   }
@@ -176,7 +176,7 @@
     fill: #fff;
   }
 
-  &:empty::after {
+  &::after {
     content: "7";
   }
 }
@@ -186,7 +186,7 @@
   background-color: #202020;
   box-shadow: inset 0px 0px 0px 2px #808080;
 
-  &:empty::after {
+  &::after {
     content: "?";
   }
 }
