--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,12 @@ body {
   }
 }
 
+#svg-defs {
+  position: fixed;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
