--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "material-symbols/rounded.css";
+@import "./styles/font.css";
 @import "./styles/skeleton.css";
 @import "./styles/intensity.css";
 
