chore: more specific on font imports

--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,8 +1,8 @@
-@import "@fontsource/noto-sans-tc/400";
-@import "@fontsource/noto-sans-tc/500";
-@import "@fontsource/noto-sans-tc/700";
-@import "@fontsource/noto-sans-tc/900";
-@import "@fontsource/lato/400";
-@import "@fontsource/lato/700";
-@import "@fontsource/lato/900";
-@import "@fontsource/open-sans/700";
+@import "@fontsource/noto-sans-tc/chinese-traditional-400.css";
+@import "@fontsource/noto-sans-tc/chinese-traditional-500";
+@import "@fontsource/noto-sans-tc/chinese-traditional-700";
+@import "@fontsource/noto-sans-tc/chinese-traditional-900";
+@import "@fontsource/lato/latin-400";
+@import "@fontsource/lato/latin-700";
+@import "@fontsource/lato/latin-900";
+@import "@fontsource/open-sans/latin-700";
